Practice tensorflow dataloader
https://pytorch.org/tutorials/beginner/basics/data_tutorial.html

--- a/gsds-nlp-assignment-1/a1(tex)/main.tex
+++ b/gsds-nlp-assignment-1/a1(tex)/main.tex
@@ -42,7 +42,6 @@
 \makeheader{\textbf{Due on} Thursday Sep. 29, 2022 \\ by \textbf{3:30pm (before class)}}{Assignment 1: Word and Sentence Representation}
 \begin{center}
 %%%%%YOUR NAME HERE%%%%%
-
 \fbox{%
   \parbox{\textwidth}{
   \begin{center}
@@ -64,7 +63,7 @@
 \item Skeleton codes for problem 1, 2, 3, and 4 are at the directory \texttt{/skipgram}, \texttt{/fasttext}, \texttt{/sentence}, and \texttt{/tfidf} each. 
 \item Run the \texttt{bash collect\_submission.sh} script to produce your 2022\_abcde\_coding.zip file. Please make sure to modify collect\_sumbssion.sh file before running this command. (\textbf{abcde} stands for your student id)
 \item Modify this tex file into \texttt{2022\_abcde\_written.pdf} with your written solutions
-\item Upload both \texttt{2022\_abcde\_coding.zip} and \thttps://www.overleaf.com/project/632c396c9d73cc88b3d14167exttt{2022\_abcde\_written.pdf} to etl website. \textbf{(4pts)}
+\item Upload both \texttt{2022\_abcde\_coding.zip} and to etl website. \textbf{(4pts)}
 \end{itemize}
 
 %%%NOTE FOR MYSELF%%%
